--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -4,3 +4,9 @@
   priority="1"
 />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+  rel="stylesheet"
+/>
